# plurum-hermes

./: README.md  __init__.py  after-install.md  client.py  hook.py  metrics.py  onboarding.py  plugin.yaml  pyproject.toml  register.sh  setup_cmd.py  tools.py
